--- a/web_static/style/homepage.css
+++ b/web_static/style/homepage.css
@@ -14,15 +14,10 @@ header{
     align-items: center;
 }
 header .logo{
+    margin-left: 30px;
     display: flex;
     gap: 10px;
     align-items: center;
-    /* width: 50%; */
-    /* height: 100%; */
-    /* background-color: #f5f5f5; */
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
 }
 header .logo img{
     width: 100px;
@@ -31,4 +26,34 @@ header .logo img{
 header .logo h1{
     font-size: 2.5em;
     color: #333;
+}
+header .nav_btn{
+    display: flex;
+    gap: 30px;
+}
+header .nav_btn button{
+    background-color: #ffffff;
+    padding: 15px;
+    border: none;
+    border-radius: 10px;
+    font-size: 1em;
+    color: #333;
+    cursor: pointer;
+    font-weight: 600;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+header .cont_btn{
+    display: flex;
+    margin-right: 50px;
+}
+header .cont_btn button{
+    background-color: #ffffff;
+    padding: 15px;
+    border: none;
+    border-radius: 10px;
+    font-size: 1em;
+    color: #333;
+    cursor: pointer;
+    font-weight: 600;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
