--- a/web_static/style/homepage.css
+++ b/web_static/style/homepage.css
@@ -57,3 +57,51 @@ header .cont_btn button{
     font-weight: 600;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
+.head_line{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 743.22px;
+    background-color: rgba(33, 50, 68, 1);
+}
+.head_line .head_tex{
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* height: 100%; */
+}
+.head_line .head_tex .head{
+    color: #ffffff;
+    margin-top: 195px;
+    margin-left: 52px;
+    width: 563px;
+    height: 86px;
+    font-size: 36px;
+
+}
+.head_line .head_tex .head span{
+    color: rgba(121, 155, 209, 1);
+    /* margin-left: -50px; */
+}
+.head_line .head_tex .subhead{
+    color: #ffffff;
+    margin-left: 52px;
+    width: 601px;
+    font-style: italic;
+}
+.head_line .head_tex button{
+    margin-top: 150px;
+    margin-left: 100px;
+    width: 157px;
+    height: 67px;
+    border-radius: 15px;
+    font-weight: 600;
+}
+.head_line img{
+    width: 730px;
+    height: 730px;
+    border-radius: 50%;
+    margin-right: 50px;
+}
