--- a/web_static/style/homepage.css
+++ b/web_static/style/homepage.css
@@ -112,12 +112,17 @@ header .cont_btn button{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 1000px;
+    height: 1300px;
     background-color: #f5f5f5;
 }
 .services .service_card{
-    display: flex;
-    gap: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    width: 80%;
+    max-width: 1200px;
+    padding: 20px;
+    box-sizing: border-box;
 }
 .services .service_card .devops{
     display: flex;
@@ -196,3 +201,42 @@ header .cont_btn button{
     background-color: rgba(33, 50, 68, 1);
     padding: 7px;
 }
+.services .service_card .Data_Analysis{
+    display: flex;
+    flex-direction: column;
+    /* width: 25%; */
+}
+.services .service_card .Data_Analysis img{
+    width: 500px;
+    height: 500px;
+    border-radius: 30px;
+}
+.services .service_card .Data_Analysis h3{
+    color: #ffffff;
+    font-size: 1.4em;
+    margin-top: 20px;
+    border: 1px solid;
+    border-radius: 10px;
+    background-color: rgba(33, 50, 68, 1);
+    padding: 7px;
+}
+.services .service_card .seo{
+    display: flex;
+    flex-direction: column;
+    /* width: 25%; */
+}
+.services .service_card .seo img{
+    width: 500px;
+    height: 500px;
+    border-radius: 30px;
+}
+.services .service_card .seo h3{
+    color: #ffffff;
+    font-size: 1.4em;
+    margin-top: 20px;
+    border: 1px solid;
+    border-radius: 10px;
+    background-color: rgba(33, 50, 68, 1);
+    padding: 7px;
+}
+
