--- a/web_static/style/homepage.css
+++ b/web_static/style/homepage.css
@@ -109,25 +109,28 @@ header .cont_btn button{
 .services{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 1300px;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
+}
+.services h1{
+    display: flex;
+    font-weight: bolder;
+    font-style: italic;
+    justify-content: center;
+
+    font-size: 5em;
+    margin-top: 50px;
+    margin-left: 100px;
 }
 .services .service_card{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    width: 80%;
-    max-width: 1200px;
+    width: 100%;
+    max-width: 100%;
     padding: 20px;
     box-sizing: border-box;
-}
-.services .service_card .devops{
-    display: flex;
-    flex-direction: column;
-    /* width: 500px; */
 }
 .services .service_card .devops img{
     width: 100%;
@@ -143,13 +146,8 @@ header .cont_btn button{
     background-color: rgba(33, 50, 68, 1);
     padding: 7px;
 }
-.services .service_card .ui_ux{
-    display: flex;
-    flex-direction: column;
-    /* width: 25%; */
-}
 .services .service_card .ui_ux img{
-    width: 500px;
+    width: 100%;
     height: 500px;
     border-radius: 30px;
 
@@ -163,13 +161,8 @@ header .cont_btn button{
     background-color: rgba(33, 50, 68, 1);
     padding: 7px;
 }
-.services .service_card .appdev{
-    display: flex;
-    flex-direction: column;
-    /* width: 25%; */
-}
 .services .service_card .appdev img{
-    width: 500px;
+    width: 100%;
     height: 500px;
     border-radius: 30px;
 }
@@ -182,13 +175,8 @@ header .cont_btn button{
     background-color: rgba(33, 50, 68, 1);
     padding: 7px;
 }
-.services .service_card .digitalM{
-    display: flex;
-    flex-direction: column;
-    /* width: 25%; */
-}
 .services .service_card .digitalM img{
-    width: 500px;
+    width: 100%;
     height: 500px;
     border-radius: 30px;
 }
@@ -201,13 +189,9 @@ header .cont_btn button{
     background-color: rgba(33, 50, 68, 1);
     padding: 7px;
 }
-.services .service_card .Data_Analysis{
-    display: flex;
-    flex-direction: column;
-    /* width: 25%; */
-}
+
 .services .service_card .Data_Analysis img{
-    width: 500px;
+    width: 100%;
     height: 500px;
     border-radius: 30px;
 }
@@ -220,13 +204,8 @@ header .cont_btn button{
     background-color: rgba(33, 50, 68, 1);
     padding: 7px;
 }
-.services .service_card .seo{
-    display: flex;
-    flex-direction: column;
-    /* width: 25%; */
-}
 .services .service_card .seo img{
-    width: 500px;
+    width: 100%;
     height: 500px;
     border-radius: 30px;
 }
@@ -239,4 +218,3 @@ header .cont_btn button{
     background-color: rgba(33, 50, 68, 1);
     padding: 7px;
 }
-
