--- a/web_static/style/homepage.css
+++ b/web_static/style/homepage.css
@@ -68,9 +68,6 @@ header .cont_btn button{
     display: flex;
     flex-direction: column;
     margin-left: 100px;
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* height: 100%; */
 }
 .head_line .head_tex .head{
     color: #ffffff;
@@ -229,4 +226,45 @@ header .cont_btn button{
     height: 200px;
     border-radius: 50%;
     cursor: pointer;
+}
+.benefits{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 1000px;
+    background-image: url(../images/benef.jpeg);
+    margin-top: 400px;
+}
+.benefits h1{
+    display: flex;
+    font-weight: bolder;
+    font-style: italic;
+    justify-content: center;
+    font-size: 5em;
+    margin-top: 50px;
+    margin-left: 100px;
+    color: rgba(33, 50, 68, 1);
+}
+.benefits .description{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 100%;
+    max-width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+}
+.description div{
+    display: flex;
+    flex-direction: column;
+    border: 1px;
+    background-color: rgba(165, 198, 233, 1);
+    border-radius: 15px;
+    align-items: center;
+}
+.description div h2{
+    font-size: 30px;
+}
+.description div p{
+    font-size: 20px;
 }
