--- a/web_static/style/homepage.css
+++ b/web_static/style/homepage.css
@@ -281,8 +281,13 @@ header .cont_btn button{
     color: rgba(105, 112, 119, 1);
     margin-left: 150px;
 }
-.footer .social_media i{
+.footer .social_media{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-right: 150px;
     width: 50px;
-    height: 50px; 
+    height: 50px;
+    cursor: pointer;
 
 }
