--- a/bootstrap/assets/css/style.css
+++ b/bootstrap/assets/css/style.css
@@ -11848,7 +11848,7 @@ textarea.form-control-lg {
   position: relative;
   padding: 0.9375rem 4.375rem 0.9375rem 1.25rem;
   font-weight: 700;
-  margin: 0;
+  margin-left: 10rem;
   border: 0.1rem solid rgba(255, 255, 255, 0.6);
   background-color: #fff;
 }
@@ -11875,6 +11875,26 @@ textarea.form-control-lg {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.display-2 {
+  margin-bottom: 1rem;
+  text-transform: capitalize;
+  font-family: "Poppins", sans-serif;
+}
+.display-2--intro {
+  display: inline-block;
+  font-weight: 600;
+  text-align: center;
+  color: #fff;
+}
+.display-2--description {
+  font-size: 2rem;
+  display: block;
+  text-align: center;
+  color: #fff;
+  margin-top: 1.2rem;
+  text-transform: none;
+}
+
 .menu {
   background: linear-gradient(to right, rgba(37, 63, 75, 0.95), rgba(142, 177, 194, 0.95));
 }
@@ -11885,6 +11905,18 @@ textarea.form-control-lg {
   color: #fff !important;
   text-transform: capitalize;
   font-weight: 700;
+}
+
+.intro-section {
+  background: linear-gradient(to right, rgba(37, 63, 75, 0.95), rgba(142, 177, 194, 0.95));
+  padding: 10rem 0 0 0;
+  width: 100%;
+  height: 100%;
+}
+
+.intros img {
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
