--- a/bootstrap/scss/components/_buttons.scss
+++ b/bootstrap/scss/components/_buttons.scss
@@ -4,9 +4,10 @@
     position: relative;
     padding: 0.9375rem 4.375rem 0.9375rem 1.25rem;
     font-weight: 700;
-    margin: 0;
+    margin-left: 10rem;
     border: 0.1rem solid rgba($white, 0.6);
     background-color: $white;
+    
     span{
         position: absolute;
         background-color: $primary;
