--- a/bootstrap/scss/components/_buttons.scss
+++ b/bootstrap/scss/components/_buttons.scss
@@ -32,3 +32,10 @@
          }
 }
 }
+.btn-anime{
+    width: 10rem;
+    padding: 1rem;
+    font-weight: 700;
+    border: 0.1rem solid rgba($white, 0.6);
+    background-color: $white;
+}
