--- a/bootstrap/scss/sections/_testimonials.scss
+++ b/bootstrap/scss/sections/_testimonials.scss
@@ -4,4 +4,44 @@
     position: relative;
     padding: 0;
     @include gradient;
+
+    &__card{
+        background-color: rgba($white, 0.8);
+        padding: 2rem 1.25rem;
+        border-radius: 0.625rem;
+        height: auto;
+        text-align: center;
+
+        i{
+            font-size: 1.5rem;
+            color: rgba($primary, 0.7);
+        }
+
+        .rating{
+            i{
+                color: rgba($primary, 0.7);
+                font-size: 1rem;
+        }
+
+
+    }
+    &__picture{
+        width: 10px;
+        height: 10px;
+        // border-radius: 50%;
+        position: absolute;
+    }
+    &__name{
+        padding-top: 4rem;
+        margin-bottom: 1rem;
+        text-align: center;
+        font-weight: 500;
+        color: rgba $white;
+        h3{
+            padding-top: 0.8rem;
+        }
+
+
+    }
+}
 }
