--- a/bootstrap/scss/style.scss
+++ b/bootstrap/scss/style.scss
@@ -10,3 +10,5 @@
 @use './sections/navbar';
 @use './sections/intro-section';
 @use './sections/testimonials';
+@use './sections/get-started';
+@use './sections/footer';
