--- a/bootstrap/scss/sections/_intro-section.scss
+++ b/bootstrap/scss/sections/_intro-section.scss
@@ -13,3 +13,18 @@
         height: 100%;
     }
 }
+.service-intro-section{
+    padding: 10rem 0 0 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/bootstrap/images/service_backgroud.jpeg');
+}
+.subheadline{
+    @include gradient;
+    padding: 5rem 0 0 0;
+    
+}
+.service-box{
+    width: 100%;
+    height: 50%;
+}
