final contact us

--- a/bootstrap/scss/components/_typography.scss
+++ b/bootstrap/scss/components/_typography.scss
@@ -23,3 +23,6 @@
 .display-3 {
     font-weight: 'Poppins', sans-serif;
 }
+.gradient{
+    background: linear-gradient(to right, rgba($primary, 0.95), rgba($secondary, 0.95));
+}
