--- a/bootstrap/scss/style.scss
+++ b/bootstrap/scss/style.scss
@@ -1,4 +1,4 @@
-@use 'custom';
+@use './custom';
 
 // Path: bootstrap/scss/_custom.scss
 // This file is used to override the default Bootstrap 5 variables.
